# grezi

./: .gitignore  AQWF_prezi.grz  Cargo.toml  README.md  example.grz  hmm.grz
grezi_composer/: Cargo.toml  ui.fd
grezi_composer/src/: main.rs
grezi_skia/: Cargo.toml
grezi_skia/src/: audio.rs  main.rs
grzfmt/: Cargo.toml
grzfmt/src/: main.rs
lib_grezi/: Cargo.toml
lib_grezi/src/: easing.rs  layout.rs  lib.rs
src/: layout.rs  lib.rs  main.rs  skia_render.rs
