[package]
name = "grezi_composer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin = { version = "0.14.1", features = ["skia-textlayout"] }
grezi = { path = "../lib_grezi" }
anyhow = "1.0.56"
memmap = "0.7.0"
sdl2 = { version = "0.35.2", features = ["raw-window-handle"] }
egui = "0.17.0"
