[package]
name = "grezi_skia"
version = "1.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
memmap = "0.7.0"
skulpin = { version = "0.14.1", features = [
  "skia-textlayout",
  "winit-latest",
  "winit-app",
] }
structopt = "0.3.26"
glam = "0.20.2"
ariadne = "0.1.3"
grezi = { path = "../lib_grezi" }
rayon = "1.5.1"
