[package]
name = "grezi_skia"
version = "2.0.0-beta1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
memmap = "0.7.0"
skulpin = { version = "0.14.1", features = ["skia-textlayout"] }
structopt = "0.3.26"
glam = "0.20.2"
ariadne = "0.1.5"
grezi = { path = "../lib_grezi" }
rayon = "1.5.1"
kira = "0.6.0-beta.5"
sdl2 = { version = "0.35.2", features = ["raw-window-handle"] }
