[package]
name = "grezi_skia"
version = "2.1.0-beta1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
memmap = "0.7.0"
skulpin = { git = "https://github.com/StratusFearMe21/skulpin-sdl2", features = [
  "skia-textlayout",
] }
structopt = "0.3.26"
glam = "0.20.2"
ariadne = "0.1.5"
grezi = { path = "../lib_grezi" }
rayon = "1.5.1"
kira = { version = "0.6.0", default-features = false, features = [
  "mp3",
  "ogg",
  "flac",
  "wav",
] }

ringbuf = "0.2.7"
ash = "0.32.0"
sdl2 = "0.35.2"
