[package]
name = "grezi"
version = "1.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grezi"


[dependencies]
chumsky = "0.8.0"
glam = { version = "0.20.2", features = ["mint"] }
ahash = "0.7.6"
cassowary = "0.3.0"
rayon = "1.5.1"
keyframe = "1.0.4"
keyframe_derive = "1.0.0"
